# geodiff

./: .flake8  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements_dev.txt  setup.py
data/: create_features.py
geodiff/: CMakeLists.txt
geodiff/cmake/: FindPostgres.cmake
geodiff/cmake_templates/: geodiff_config.hpp.in
geodiff/src/: changeset.h  changesetconcat.cpp  changesetreader.cpp  changesetreader.h  changesetutils.cpp  changesetutils.h  changesetvarint.cpp  changesetvarint.h  changesetwriter.cpp  changesetwriter.h  driver.cpp  driver.h  geodiff-cli.cpp  geodiff.cpp  geodiff.h  geodiffchangeset.cpp  geodiffchangeset.h  geodiffcmd.c  geodiffcontext.cpp  geodiffcontext.hpp  geodiffdriver.cpp  geodiffdriver.h  geodiffdriver.hpp  geodiffdrivermanager.cpp  geodiffdrivermanager.hpp  geodiffexporter.cpp  geodiffexporter.hpp  geodiffinfo.cpp  geodifflogger.cpp  geodifflogger.hpp  geodiffrebase.cpp  geodiffrebase.hpp  geodiffutils.cpp  geodiffutils.hpp  portableendian.h  sqlitedriver.cpp  sqlitedriver.h  tableschema.cpp  tableschema.h  tableschemadiff.cpp  (+2 more)
geodiff/src/drivers/: postgresdriver.cpp  postgresdriver.h  postgresutils.cpp  postgresutils.h  sqlitedriver.cpp  sqlitedriver.h  sqliteutils.cpp  sqliteutils.h
geodiff/src/drivers/geopackage/: geodiffgeopackagedriver.cpp  geodiffgeopackagedriver.hpp
geodiff/src/drivers/sqlite/: geodiffsqlitedriver.cpp  geodiffsqlitedriver.hpp  geodiffsqliterebase.cpp  geodiffsqliterebase.hpp  geodiffsqliteutils.cpp  geodiffsqliteutils.hpp
geodiff/tests/: CMakeLists.txt  GTestCMakeLists.in  geodiff_testutils.cpp  geodiff_testutils.hpp  test_c_api.cpp  test_changeset_reader.cpp  test_changeset_utils.cpp  test_concurrent_commits.cpp  test_context.cpp  test_driver_postgres.cpp  test_driver_sqlite.cpp  test_geometry_utils.cpp  test_modified_scheme.cpp  test_single_commit.cpp  test_skip_tables.cpp  test_utils.cpp
geodiff/tests/testdata/: base.gpkg  base.sqlite  base3.gpkg  base_fk.gpkg  inserted_1_A.gpkg  testdata_mergin.qgz
geodiff/tests/testdata/1_geopackage/: base-modified_1_geom.diff
geodiff/tests/testdata/2_deletes/: 2_deletes.json  base-deleted_A.diff  base-deleted_A.json
geodiff/tests/testdata/2_inserts/: 2_inserts.json  base-inserted_1_A.diff  base-inserted_1_A.json  inserted_1_B.gpkg  merged_1_A_1_B.gpkg
geodiff/tests/testdata/2_updates/: 2_updates.json  base-updated_A-summary.json  base-updated_A.diff  base-updated_A.json  merged_1_A_1_B.gpkg  updated_A.gpkg  updated_B.gpkg
geodiff/tests/testdata/2_updates_2/: merged_A_B.gpkg  updated_A.gpkg  updated_B.gpkg
geodiff/tests/testdata/3d/: db-3d-base.gpkg  db-3d-modified.gpkg  db3d-base.gpkg  db3d-modified.gpkg
geodiff/tests/testdata/apply_with_gpkg_contents/: base-gpkg-contents-conflict.diff
geodiff/tests/testdata/capital-letters/: db-capital-base.gpkg  db-capital-modified.gpkg
geodiff/tests/testdata/changeset-drivers/: base.gpkg  modified.gpkg
geodiff/tests/testdata/complex/: complex1.gpkg  complex1.json
geodiff/tests/testdata/concat/: bar-delete.diff  bar-insert.diff  bar-update.diff  foo-insert-update-1.diff  foo-insert-update-2.diff  foo-insert-update-result.diff
geodiff/tests/testdata/conflict/: base-conflict-delete.diff
geodiff/tests/testdata/conversions/: db-multi-geometries.gpkg  db-time.gpkg
geodiff/tests/testdata/datetime/: datetime1-2-ms.diff  datetime1-2.diff  datetime1-3a.diff  datetime1-ms.gpkg  datetime1.gpkg  datetime1a.gpkg  datetime2-ms.gpkg  datetime2.gpkg  datetime3.gpkg
geodiff/tests/testdata/delete_update/: deleted_A.gpkg  updated_B.gpkg
geodiff/tests/testdata/dir_with_quote's's/: base.gpkg  r.diff  recreated.gpkg
geodiff/tests/testdata/edge-cases/: db-edge-cases-mod.gpkg  db-edge-cases.gpkg
geodiff/tests/testdata/empty_geom/: db-empty.gpkg
geodiff/tests/testdata/envelope_gpkg/: db-envelope.gpkg
geodiff/tests/testdata/fk_1_update/: modified_fk.gpkg
geodiff/tests/testdata/fk_2_updates/: modified_fk_A.gpkg  modified_fk_AB.gpkg  modified_fk_A_plus_new_tree.gpkg  modified_fk_B.gpkg  modified_fk_new_tree_plus_A.gpkg  modified_fk_only_new_tree.gpkg
geodiff/tests/testdata/floating_point_values/: db-floating.gpkg
geodiff/tests/testdata/gpkg_custom_triggers/: db-base.gpkg  db-modified_A.gpkg  db-modified_B.gpkg
geodiff/tests/testdata/gpkg_triggers/: db-base.gpkg  db-modified.gpkg  modified-changeset.diff
geodiff/tests/testdata/insert_multiple/: a_4_5.gpkg  ab_rebased.gpkg  ac_rebased.gpkg  b_4_5_6.gpkg  c_4_5_6_7_8.gpkg
geodiff/tests/testdata/modified_scheme/: added_attribute.gpkg  added_attribute2.gpkg  added_attribute_different_type.gpkg  added_table.gpkg  added_table2.gpkg  changed_attribute_type.gpkg  reprojected.gpkg  reprojected2.gpkg
geodiff/tests/testdata/postgres/: base.sql  datatypes.sql  deleted_a.sql  diff.sql  diff2.sql  dump_data.diff  floats.sql  inserted_1_a.diff  inserted_1_a.sql  inserted_1_b.sql  test_apply.sql  tz_miliseconds.sql  tz_updated.sql  updated_a.diff  updated_a.sql
geodiff/tests/testdata/pure_sqlite/: modified_base.sqlite
geodiff/tests/testdata/quoting/: trigger-with-space.gpkg
geodiff/tests/testdata/rebase_conflict/: case1a.diff  case1b.diff  case2b.diff  case3a-rebased.conflicts  case3a-rebased.diff  case3a.diff  case3b.diff  case4a-rebased.conflicts  case4a-rebased.diff  case4a.diff  case4b.diff
geodiff/tests/testdata/schema/: base-schema-no-tables.json  base-schema.json
geodiff/tests/testdata/skip_tables/: base.gpkg  modified_all.gpkg  modified_points.gpkg
geodiff/tests/testdata/sqlite_pks/: multi_primary_key.sqlite  multi_primary_key_A.diff  multi_primary_key_A.sqlite  multi_primary_key_B.diff  multi_primary_key_B.sqlite  text_pk.sqlite  text_pk_A.diff  text_pk_A.sqlite  text_pk_B.diff  text_pk_B.sqlite
geodiff/tests/testdata/update_delete/: update_delete.json
geodiff/tests/testdata/updates_to_different_tables/: add_1.gpkg  add_1_outside_extent.gpkg  add_line.gpkg  add_point.gpkg  final_add_line.gpkg  final_delete_line.gpkg  final_extent.gpkg  final_modify_line.gpkg  modify_line.gpkg  remove_line.gpkg
(+82 files in other folders)
