[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "pygeodiff"
version = "2.3.0"
description = "Python wrapper around GeoDiff library"
readme = "README.md"
authors = [{ name = "Lutra Consulting Ltd.", email = "info@merginmaps.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["diff", "gis", "geo", "geopackage", "merge"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/MerginMaps/geodiff"

[tool.scikit-build]
# The geodiff C++ library (CMakeLists.txt) lives in the geodiff/ subdirectory.
cmake.source-dir = "geodiff"
# Pure-Python package shipped alongside the compiled library.
wheel.packages = ["pygeodiff"]
# The old setup.py used packages=["pygeodiff"], which did not ship the tests.
wheel.exclude = ["pygeodiff/tests/**"]
# CMakeLists.txt declares 3.15; let scikit-build-core fetch a matching CMake.
cmake.version = ">=3.15"

[tool.scikit-build.cmake.define]
ENABLE_TESTS = "OFF"
ENABLE_COVERAGE = "OFF"
BUILD_TOOLS = "OFF"
PEDANTIC = "OFF"
